card header overflow fix

--- a/AngularTest/Content/Sass/app.scss
+++ b/AngularTest/Content/Sass/app.scss
@@ -88,10 +88,17 @@ input.ng-invalid.ng-dirty {
     a {
         text-decoration: none;
     }
+
     h2 {
         padding-left: 15px;
         margin-top: 5px;
+        -ms-text-overflow: ellipsis;
+        -o-text-overflow: ellipsis;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
     }
+
     .thumbnails li {
         padding-left: 0;
     }
